Restore support of DATETIME data type in MySQL and MariaDB compatibility modes